--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
     						<label for="comment">Message</label>
     						<textarea class="form-control" rows="10" id="comment"></textarea>
 						</div>
+						<button class="btn btn-default">Submit</button>
 					</form>	
 				</div>
 			</div>
